# robota

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  run.sh
docs/: conf.py  index.md  reference.md  usage.md
robota/: __main__.py  appstate.py  command.py  env.py  errors.py  github.py  is_clean.sh  jira.py  open_terminal_at.sh  progress.py  repl.py  repl_git.py  repl_github.py  repl_jira.py  silly_example.py
src/robota/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
