[tool.poetry]
name = "robota"
version = "0.1.0"
description = ""
authors = ["Vlad Orlenko <vlad@orlenko.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.15.0"
python-dotenv = "^1.0.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
jira = {extras = ["cli"], version = "^3.5.2"}
rich = "^13.5.3"
python-slugify = "^8.0.1"
pygithub = "^1.59.1"
isort = "^5.12.0"
pyupgrade = "3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
